# rainymood.github.io

./: .gitignore  2016-04-26-ankiscrape.md  Analogies.md  CNAME  FAQ.md  Gemfile  HOW-TO-PUBLISH.TXT  Makefile  README.md  Rakefile  STYLING.md  _config.yml  _config.yml~  _config_dev.yml  log-jekyll-serve.txt  main.py  new-post.py  pyproject.toml  requirements.txt  tags.txt
_data/: navigation.yml  ui-text.yml
_drafts/: R-neuralnet-parallel.md  about-me.md  base.md  citadels2-what-is-citadels.markdown  how-to-memorise-pi.md  mailhero.md  pi-decimals.md  things-Ive-learned-master-thesis-R.md  vim-showcase-1.md  vim-solarized-iterm2.md  why-I-use-vim.md  writing-cardgame1.md
_essays/: learning-how-to-learn.md  mental-models-i-find-useful.md  software.md  system.md  things-to-blog-about.md  what-is-a-model.md
_includes/: analytics.html  archive-single.html  date.html  disqus.html  head.html  latex.html  page-footer.html  page-header.html
_layouts/: default.html  head.html  post.html
_pages/: 0-garden.md  3-good-things.md  about.md  bookshelf.md  code.md  essay-archive.md  garden.md  projects.md  splash-page.md  start.md  startup.md  tag-archive.md  year-archive-wide-grid.md  year-archive.md
_posts/: 2016-04-26-Hello-World.markdown  2016-04-26-ankiscrape.markdown  2016-04-26-ankiscrape.md  2016-05-26-welcome-to-jekyll.markdown  2016-06-02-Python-R-combine.markdown  2016-06-02-Python-R-combine.md  2016-06-16-citadels1-cards.markdown  2016-06-26-vim-macro.markdown  2016-06-26-vim-macro.md  2016-07-24-sublime-scrape.markdown  2016-12-06-necessary-sufficient.md  (+174 more)
(+154 files in other folders)
